--- a/code/Javascript/lazyload-js/index.html
+++ b/code/Javascript/lazyload-js/index.html
@@ -14,7 +14,7 @@
       if (installedModules.has(dep)) return Promise.resolve()
 
       installedModules.add(dep)
-      // 动态插入一个script标签，返回一个Promise
+      // 动态插入一个script标签，返回Promise
       return new Promise(resolve => {
         const elem = document.createElement('script')
 
