--- a/code/Vue/vuex-state-management.html
+++ b/code/Vue/vuex-state-management.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>state-store</title>
+  <title>vue-state-management</title>
 </head>
 <body>
   <div id="app" style="text-align: center;">
@@ -30,10 +30,12 @@
   })
 
   function createStore (storeConfig) {
+    // 将状态设置为响应式
     const state = reactive(storeConfig.state)
 
     return {
       state,
+      // 通过不同的mutationType调用配置中不同的方法
       commit (mutationType, payload) {
         storeConfig.mutations[mutationType](state, payload)
       },
